--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="bootstrap.css"/>
-    <title>Vite App</title>
+    <title>My platform</title>
   </head>
   <body>
     <div id="app"></div>
